module/experimental/diagnostics_tools/tests/inc/snipet/cta_type_same_size_fail.stderr
error[E0308]: mismatched types
 --> tests/inc/snipet/cta_type_same_size_fail.rs:6:3
  |
6 |   cta_type_same_size!( Int, u32 );
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |   |
  |   expected an array with a size of 2, found one with a size of 4
  |   expected due to this
  |
  = note: this error originates in the macro `cta_type_same_size` (in Nightly builds, run with -Z macro-backtrace for more info)
